--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <h1>Test PyWeb page</h1>
-  <a href="/docs/">Link to docs</a>
+  <a href="/docu-test/docs/">Link to docs</a>
 </body>
 </html>
